ncc/testsuite/positive/nested-protected-public.n
class Foo
{
  protected class Bar
  {
    public foo : Foo;
    public doo : Doo;
  }
   
   protected class Doo
   {
    
   }

  public static Main() : void
  {
    System.Console.WriteLine ("OK")
  }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
