ncc/testsuite/negative/attributes.n
public class C
{
 [System.NonSerialized] 
  public delegate CollectionClear() : void ; // E: custom attribute.* is not valid on type
  
   public static Main () : void
   {
   }
}
